<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"/>
    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/xet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value_a"/>
    <EditText
        android:id="@+id/xet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value_b"/>
    <EditText
        android:id="@+id/xet3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value_c"/>
    <Button
        android:id="@+id/xbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar" />
</LinearLayout>